--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 												</td>
 												<td></td>
 												<td>
-												<div><span style="font-size:36px;">&nbsp;--</span></div>
+												<div><span style="font-size:36px;">&nbsp;99</span></div>
 												</td>
 												<td>
 												<div><span style="font-size:36px;">&nbsp;--</span></div>
