--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 									<td align="center" style="background-color: #f7f3f3; font-weight: bold; font-size: 20px;" valign="top">
 									<h1 style="color: blue"><span style="color:#B22222;">Mumbai Day Night&nbsp;Teer Result</span></h1>
 
-									<h1 style="color: blue"><span style="color:#FF0000;">LIVE&nbsp;</span></h1>
+									<h1 style="color: blue"><span style="color:#FF0000;">&nbsp;</span></h1>
 
 									<table style="width:100%;">
 										<tbody>
@@ -37,7 +37,7 @@
 												<table border="1" cellpadding="1" cellspacing="1" style="width:300px;">
 													<tbody>
 														<tr>
-															<td><span style="font-size:26px;">&nbsp; &nbsp; &nbsp;Date : 02-03-2021</span></td>
+															<td><span style="font-size:26px;">&nbsp; &nbsp; &nbsp;Date : 03-03-2021</span></td>
 														</tr>
 													</tbody>
 												</table>
@@ -131,7 +131,7 @@
 												<table border="1" cellpadding="1" cellspacing="1" style="width:300px;">
 													<tbody>
 														<tr>
-															<td><span style="font-size:26px;">&nbsp; &nbsp; &nbsp;<strong>Date : 01-03-2021</strong></span></td>
+															<td><span style="font-size:26px;">&nbsp; &nbsp; &nbsp;<strong>Date : 02-03-2021</strong></span></td>
 														</tr>
 													</tbody>
 												</table>
@@ -179,10 +179,10 @@
 												</td>
 												<td></td>
 												<td>
-												<div><span style="font-size:36px;">&nbsp; &nbsp; 32</span></div>
+												<div><span style="font-size:36px;">&nbsp; &nbsp; 03</span></div>
 												</td>
 												<td>
-												<div><span style="font-size:36px;">&nbsp; &nbsp; 02</span></div>
+												<div><span style="font-size:36px;">&nbsp; &nbsp; 17</span></div>
 												</td>
 												<td></td>
 												<td></td>
